--- a/index.html
+++ b/index.html
@@ -1,86 +1,24 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>流水线丶</title>
-<style type="text/css">
-body {
-	background-image:    url(img/psb2.jpg)
-	text-align:center;
-	}
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style type="text/css">
+        body
+        {
+            background-image: url("img/background.jpg");
 
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-align-center{  
-margin:0 auto;      /* 居中 这个是必须的，，其它的属性非必须 */  
-width:500px;        /* 给个宽度 顶到浏览器的两边就看不出居中效果了 */  
-background:red;     /* 背景色 */  
-text-align:center;  /* 文字等内容居中 */  
-}
-
-</style>
-<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
-<script language="javascript">  
-function imgdragstart(){return false;}  
-</script>  
-
+        }
+    </style>
 </head>
+<body>
 
-<body background="img/psb2.jpg">
-<center>
-<div id="align-center"  style="position: absolute; left: 236px; top: 5;">
-<img  src="img/psb.jpg" data-ke-src="img/psb.jpg"  style=""/>
-<a href="http://blog.jxzmz.org" target="_black"><img  src="img/jxlogo.png" border="0" width="185" height="76"  style="position: absolute; width: 185px; height: 76px; left: 20px; top: 268px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a>
+    <div  style="margin:auto; width: 847px;height: 360px; background-image: url(img/Window1.jpg)">
 
-<img  src="img/psb3.jpg" data-ke-src="img/psb3.jpg"  style="position: absolute; width: 847px; height: 540px; left: 0; top: 365px;"/><a href="lsx.swf?mp3=http://update1.baiyou100.com/resource/snq.mp3&mz=少年情&loop=yes&info=yes&type=4&sign=流水线丶"target="_black"><img  src="img/4.png" border="0" width="57" height="57"  style="position: absolute; width: 57; height: 57; left: 24px; top: 739px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a>
-<a href="lsx.swf?mp3=http://update1.baiyou100.com/resource/snq.mp3&mz=少年情&loop=yes&info=yes&type=2&sign=流水线"target="_black"><img  src="img/2.png" border="0" width="57" height="58"  style="position: absolute; width: 57; height: 58; left: 23px; top: 617px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a>
-<a href="lsx.swf?mp3=http://update1.baiyou100.com/resource/snq.mp3&mz=少年情&loop=yes&info=yes&sign=流水线"target="_black"><img  src="img/0.png" border="0" width="57" height="57"  style="position: absolute; width: 57px; height: 57px; left: 26px; top: 493px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a>
-<a href="lsx.swf?mp3=http://update1.baiyou100.com/resource/snq.mp3&mz=少年情&loop=yes&info=yes&type=3&sign=流水线"target="_black"><img  src="img/3.png" border="0" width="57" height="57"  style="position: absolute; width: 57px; height: 57; left: 46px; top: 679px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a>
-<a href="lsx.swf?mp3=http://update1.baiyou100.com/resource/snq.mp3&mz=少年情&loop=yes&info=yes&type=1&sign=流水线"target="_black"><img  src="img/1.png" border="0" width="57" height="57"  style="position: absolute; width: 57; height: 57; left: 42px; top: 556px;" data-ke-src="http://img.xkacg.com/lsx/images/jxlogo.png "/></a><div style="position: absolute; width: 245px; height: 275px; font-size: 12px; top: 590px; right: 25px;">
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="245" height="275" id="FlashID" title="播放器">
-  <param name="movie" value="lsx.swf?mp3=http://qzone.haoduoge.com/music3/2015-02-19/1424343815.mp3&amp;mz=It's The Right Time&amp;loop=yes&amp;info=yes&amp;type=2&amp;sign=流水线丶" />
-  <param name="quality" value="high" />
-  <param name="wmode" value="transparent" />
-  <param name="swfversion" value="6.0.65.0" />
-  <!-- 此 param 标签提示使用 Flash Player 6.0 r65 和更高版本的用户下载最新版本的 Flash Player。如果您不想让用户看到该提示，请将其删除。 -->
-  <param name="expressinstall" value="Scripts/expressInstall.swf" />
-  <!-- 下一个对象标签用于非 IE 浏览器。所以使用 IECC 将其从 IE 隐藏。 -->
-  <!--[if !IE]>-->
-  <object type="application/x-shockwave-flash" data="lsx.swf?mp3=http://qzone.haoduoge.com/music3/2015-02-19/1424343815.mp3&mz=It's The Right Time&loop=yes&info=yes&type=2&sign=流水线丶" width="245" height="275">
-    <!--<![endif]-->
-    <param name="quality" value="high" />
-    <param name="wmode" value="transparent" />
-    <param name="swfversion" value="6.0.65.0" />
-    <param name="expressinstall" value="Scripts/expressInstall.swf" />
-    <!-- 浏览器将以下替代内容显示给使用 Flash Player 6.0 和更低版本的用户。 -->
-    <div>
-      <h4>此页面上的内容需要较新版本的 Adobe Flash Player。</h4>
-      <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获取 Adobe Flash Player" width="112" height="33" /></a></p>
+</div>
+    <div  style="margin:auto; width: 847px;height: 360px; background-image: url(img/Window1.jpg)">
+
     </div>
-    <!--[if !IE]>-->
-  </object>
-  <!--<![endif]-->
-</object>
-</div>
-</div>
-<script language="javascript">  
-for(i in document.images)document.images[i].ondragstart=imgdragstart;  
-</script> 
-</center>
 
-<script type="text/javascript">
-swfobject.registerObject("FlashID");
-</script>
 </body>
 </html>
