--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
         body
         {
             background-image: url("img/background.jpg");
-
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
-    <div  style="margin:auto; width: 847px;height: 360px; background-image: url(img/Window1.jpg)">
+    <div  style="margin:auto;position: relative;width: 847px;height: 360px">
 
-</div>
-    <div  style="margin:auto; width: 847px;height: 360px; background-image: url(img/Window1.jpg)">
+        <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px">
+        <img src="img/Window1.jpg" >
 
+    </div>
+    <div  style="margin:auto">
+        <img src="img/Window2.jpg">
     </div>
 
 </body>
