--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>流水线丶</title>
     <style type="text/css">
         body
         {
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-
+<audio src="http://lawlietz-10002763.cossh.myqcloud.com/Chelsy.mp3" loop="loop" autoplay="autoplay"></audio>
     <div  style="margin:auto;position: relative;width: 847px;height: 360px">
 
         <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px">
