--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="css/1.css" type="text/css" rel="stylesheet">
     <title>流水线丶</title>
     <style type="text/css">
         body
@@ -13,15 +14,14 @@
 </head>
 <body>
 <audio src="http://lawlietz-10002763.cossh.myqcloud.com/Chelsy.mp3" loop="loop" autoplay="autoplay"></audio>
-    <div  style="margin:auto;position: relative;width: 847px;height: 360px">
+    <div name="topWindow" style="margin:auto;position: relative;width: 847px;height: 360px">
 
-        <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px">
-        <img src="img/Window1.jpg" >
+        <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px"/>
+        <img src="img/Window1.jpg" />
 
     </div>
-    <div  style="margin:auto">
-        <img src="img/Window2.jpg">
-    </div>
+<iframe src="Window.html" width="847px" height="540px" frameborder="no" ></iframe>
+
 
 </body>
 </html>
