--- a/Window.html
+++ b/Window.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        .page{
+            border:5px deeppink double;
+        }
+    </style>
 </head>
-<body background="img/Window2.jpg">
-<form  action="" method="post">
+<body class="page">
+<form  action="" method="post" >
     用户名<input type="text"/><br>
     密码<input type="password"/><br>
     性别 男<input type="radio" name="sex"/>女<input type="radio" name="sex"/><br>
