--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         {
             background-image: url("img/background.jpg");
             text-align: center;
+            background-attachment: fixed;
         }
     </style>
 </head>
@@ -16,11 +17,11 @@
 <audio src="http://lawlietz-10002763.cossh.myqcloud.com/Chelsy.mp3" loop="loop" autoplay="autoplay"></audio>
     <div name="topWindow" style="margin:auto;position: relative;width: 847px;height: 360px">
 
-        <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px"/>
+        <a href="http://lawlietz.github.io" target="_self"> <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px"/></a>
         <img src="img/Window1.jpg" />
 
     </div>
-<iframe src="Window.html" width="847px" height="540px" frameborder="no" ></iframe>
+<iframe src="Window.html" width="847px" height="540px" frameborder="no" scrolling="no" ></iframe>
 
 
 </body>
