--- a/Window.html
+++ b/Window.html
@@ -5,20 +5,11 @@
     <title>Title</title>
     <style type="text/css">
         .page{
-            border:5px deeppink double;
+            margin: 0px;
+            padding: 0px;
         }
     </style>
 </head>
 <body class="page">
-<form  action="" method="post" >
-    用户名<input type="text"/><br>
-    密码<input type="password"/><br>
-    性别 男<input type="radio" name="sex"/>女<input type="radio" name="sex"/><br>
-    兴趣爱好<input type="checkbox" name="xingqu" src="" checked="checked"/>篮球 <input type="checkbox" name="xingqu" src=""/>足球<input type="checkbox" name="xingqu" src=""/>排球<br>
-    上传文件<input type="file"/><br>
-    提交<input type="submit"/><br>
-    充值<input type="submit"/><br>
-    普通<input type="button" value="普通按钮"/><br>
-</form>
 </body>
 </html>
