--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     <style type="text/css">
         body
         {
+
             background-image: url("img/background.jpg");
             text-align: center;
             background-attachment: fixed;
+
+        }
+
+        div
+        {
+            margin: auto;
+            width: 847px;
+            height: 360px;
+            position: relative;
+
         }
     </style>
 </head>
 <body>
-<audio src="http://lawlietz-10002763.cossh.myqcloud.com/Chelsy.mp3" loop="loop" autoplay="autoplay"></audio>
-    <div name="topWindow" style="margin:auto;position: relative;width: 847px;height: 360px">
 
-        <a href="http://lawlietz.github.io" target="_self"> <img src="img/jxlogo.png" style="position: absolute;left: 20px;bottom: 15px"/></a>
-        <img src="img/Window1.jpg" />
+<div  name="topWindow" >
+    <img src="img/Window1.jpg">
+    <a style="position: absolute;bottom: 12px;left: 20px" href="https://lawlietz.github.io" target="_self"><img src="img/jxlogo.png"></a>
 
-    </div>
+</div>
 <iframe src="Window.html" width="847px" height="540px" frameborder="no" scrolling="no" ></iframe>
 
-
+    <audio src="http://lawlietz-10002763.cossh.myqcloud.com/Chelsy.mp3" loop="loop" autoplay="autoplay"></audio>
 </body>
 </html>
